# lazydjango

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build.bat  build.sh  build_script.py  build_upload.py  pyproject.toml
.github/workflows/: build.yml  test.yml
bruno/: collection.json
lazydjango/: __init__.py  __main__.py  cli.py
lazydjango/api/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
lazydjango/generators/: __init__.py  admin_gen.py  auth_gen.py  bruno_gen.py  frontend_gen.py  middleware_gen.py  model_gen.py  static_gen.py  view_gen.py
lazydjango/templates/: admin.py.j2  api_view.py.j2  base.html.j2  forms.py.j2  html-form.html.j2  middleware.py.j2  model.py.j2  serializer.py.j2  urls.py.j2  view.py.j2  viewset.py.j2
lazydjango/utils/: __init__.py  detector.py
scripts/: test_local.ps1  test_local.sh
tests/: __init__.py  test_cli.py  test_generators.py
ui/: next.config.js  package-lock.json  package.json
ui/public/: index.html
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: AuthSetup.tsx  DatabaseTab.tsx  MiddlewareCreator.tsx  ProjectInfo.tsx  ResourcePage.tsx  ServerPanel.tsx  StaticSetup.tsx
